<resources>
    <string name="app_name">Tap Calci</string>
    <string name="clear">C</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="open_p">(</string>
    <string name="close_p">)</string>
    <string name="seven">7</string>
    <string name="eight">8\n</string>
    <string name="nine">9\n</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="four">4</string>
    <string name="one">1</string>
    <string name="three">3</string>
    <string name="addition">+</string>
    <string name="two">2</string>
    <string name="zero">0</string>
    <string name="period">.</string>
    <string name="equals">=</string>
    <string name="all_clear">AC</string>
</resources>